# hzlibc

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakeOptions.cmake  LICENSE.md  README.md  config.h.in
include/: alloca.h  ar.h  assert.h  byteswap.h  ctype.h  dirent.h  dlfcn.h  elf.h  endian.h  err.h  errno.h  error.h  execinfo.h  fcntl.h  features.h  fenv.h  fnmatch.h  getopt.h  glob.h  grp.h  iconv.h  ifaddrs.h  inttypes.h  langinfo.h  libgen.h  libintl.h  limits.h  link.h  locale.h  malloc.h  math.h  mntent.h  mqueue.h  netdb.h  nl_types.h  paths.h  pthread.h  pty.h  pwd.h  regex.h  (+29 more)
include/arpa/: inet.h  nameser.h
include/attr/: xattr.h
include/bits/: iov.h  mbstate_t.h  seek.h  sigset_t.h  termios.h  thread_types.h  time_t.h  utils.h
include/bsd/: stdlib.h
include/net/: if.h  if_arp.h
include/netinet/: icmp6.h  in.h  in_systm.h  ip.h  ip_icmp.h  tcp.h
include/sys/: capability.h  epoll.h  eventfd.h  file.h  inotify.h  io.h  ioctl.h  ipc.h  klog.h  mman.h  mount.h  msg.h  mtio.h  param.h  personality.h  poll.h  prctl.h  procfs.h  ptrace.h  random.h  reg.h  resource.h  select.h  sem.h  sendfile.h  shm.h  signalfd.h  socket.h  soundcard.h  stat.h  statfs.h  statvfs.h  swap.h  sysinfo.h  syslog.h  sysmacros.h  time.h  timerfd.h  times.h  ttydefaults.h  (+7 more)
src/: CMakeLists.txt  allocator.cpp  allocator.hpp  cxx.cpp  log.cpp  log.hpp  utils.hpp
src/ansi/: CMakeLists.txt  assert.cpp  ctype.cpp  env.hpp  errno.cpp  fenv.cpp  inttypes.cpp  locale.cpp  math.cpp  signal.cpp  stdio.cpp  stdio_internal.hpp  stdlib.cpp  str_to_float.hpp  str_to_int.hpp  string.cpp  threads.cpp  time.cpp  uchar.cpp  wchar.cpp  wctype.cpp
src/ansi/musl-math/: __invtrigl.h  atomic_arch.h  exp10.c  exp10f.c  exp2f_data.h  exp_data.h  libm.h  log2_data.h  log2f_data.h  log_data.h  logf_data.h  pow_data.h  remainder.c  remainderf.c  sqrt_data.h
src/bsd/: CMakeLists.txt  err.cpp  file.cpp  grp.cpp  netdb.cpp  pty.cpp  stdio.cpp  stdlib.cpp  time.cpp  uio.cpp  unistd.cpp
src/glibc/: CMakeLists.txt  backtrace.cpp  ctype.cpp  cxx.cpp  dev.cpp  dirent.cpp  dlfcn.cpp  errno.cpp  error.cpp  getopt.cpp  link.cpp  malloc.cpp  misc.cpp  nameser.cpp  pthread.cpp  pthread_internal.hpp  resolv.cpp  sched.cpp  search.cpp  stdio.cpp  stdio_ext.cpp  stdlib.cpp  string.cpp  sysinfo.cpp  syslog.cpp  unistd.cpp
src/internal/: CMakeLists.txt  cha_cha.cpp  cha_cha.hpp  dns.cpp  dns.hpp  float_gcc.cpp  gcc.cpp  mutex.cpp  mutex.hpp  stack.cpp  stdio_unlocked.cpp  stdio_unlocked.hpp  string.cpp  string.hpp  tcb.hpp  thread.cpp  thread.hpp  time.hpp
src/internal/aarch64/: CMakeLists.txt  crt1.S  crti.S  crtn.S  setjmp.cpp
src/internal/i386/: CMakeLists.txt  crt1.S  crti.S  crtn.S  scrt1.S  setjmp.cpp
src/internal/x86_64/: CMakeLists.txt  crt1.S  crti.S  crtn.S  scrt1.S  setjmp.cpp
src/intl/: CMakeLists.txt  libintl.cpp
src/linux/: CMakeLists.txt  cap.cpp  epoll.cpp  eventfd.cpp  fcntl.cpp  ifaddrs.cpp  inotify.cpp  io.cpp  klog.cpp  mman.cpp  mount.cpp  personality.cpp  poll.cpp  prctl.cpp  ptrace.cpp  random.cpp  sched.cpp  sendfile.cpp  signalfd.cpp  socket.cpp  stat.cpp  swap.cpp  sysinfo.cpp  uio.cpp  unistd.cpp  wait.cpp  xattr.cpp
src/lsb/: CMakeLists.txt  chk.cpp  fork.cpp  misc.cpp  stat.cpp
src/posix/: CMakeLists.txt  ctype.cpp  dirent.cpp  dlfcn.cpp  fcntl.cpp  fnmatch.cpp  getopt.cpp  glob.cpp  grp.cpp  iconv.cpp  if.cpp  inet.cpp  ioctl.cpp  ipc.cpp  langinfo.cpp  libgen.cpp  locale.cpp  mman.cpp  mntent.cpp  mqueue.cpp  net_utils.cpp  net_utils.hpp  netdb.cpp  nl.cpp  poll.cpp  pthread.cpp  pwd.cpp  regex.cpp  resource.cpp  sched.cpp  search.cpp  select.cpp  sem.cpp  semaphore.cpp  setjmp.cpp  shm.cpp  sigjmp.cpp  signal.cpp  socket.cpp  spawn.cpp  (+16 more)
src/rtld/: elf.hpp  main.cpp  object_storage.cpp  object_storage.hpp  opts.hpp  rtld.cpp  rtld.hpp  shared_object.cpp  shared_object.hpp  start.cpp
sys/: CMakeLists.txt  ansi_sys.hpp  sys.hpp
sys/crescent/: CMakeLists.txt  ansi_sys.cpp  posix_sys.cpp  sys.cpp
sys/linux/: CMakeLists.txt  sys.cpp
sys/linux/aarch64/: CMakeLists.txt  syscall.cpp  syscall.hpp
sys/linux/aarch64/include/bits/: syscall_nums_aarch64.h
sys/linux/i386/: syscall.cpp  syscall.hpp
sys/linux/i386/include/: syscall.h
sys/linux/i386/include/bits/: syscall_nums_i386.h
sys/linux/include/sys/: syscall.h
sys/linux/x86_64/: syscall.cpp  syscall.hpp
sys/linux/x86_64/include/: syscall.h
sys/linux/x86_64/include/bits/: syscall_nums_x86_64.h
sys/template/: CMakeLists.txt  sys.cpp
tests/: CMakeLists.txt  ansi.cpp  posix.cpp
